# pranatics_dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
